# nudl

./: CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  deny.toml
.github/workflows/: ci.yml
src/: cli.rs  client.rs  constants.rs  crypto.rs  download.rs  file.rs  main.rs  model.rs  progress.rs  split.rs
xtask/: Cargo.toml
xtask/src/: main.rs
