[package]
name = "nudl"
version = "0.1.3"
edition = "2024"
repository = "https://github.com/chenxiaolong/nudl"
publish = false

[dependencies]
aes = "0.8.4"
anyhow = "1.0.80"
base64 = "0.22.0"
block-padding = "0.3.3"
bytes = "1.5.0"
cap-std = "3.0.0"
cbc = "0.1.2"
cipher = { version = "0.4.4", features = ["alloc", "block-padding"] }
clap = { version = "4.5.2", features = ["derive", "env"] }
crc32fast = "1.4.0"
futures-core = "0.3.30"
indicatif = "0.17.8"
jiff = "0.2.1"
reqwest = { version = "0.12.0", features = ["charset", "json", "http2", "macos-system-configuration", "rustls-tls", "stream"], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.11"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"
zip = { version = "2.1.5", features = ["deflate"], default-features = false }
zipunsplitlib = { git = "https://github.com/chenxiaolong/zipunsplit.git", tag = "v0.1.1" }

[dev-dependencies]
hex-literal = "1.0.0"
